<resources>
    <string name="app_name">MyQuizzApp</string>
    <string name="nameField">Please Enter you name Here</string>
    <string name="nameField_hint">Please Enter your name here</string>
    <string name="question_1">QUESTION 1</string>
    <string name="question_3hint">Enter the alphabet letter next to your answer</string>
    <string name="questionOne">How many times has Michael Schumacher been a Formula 1 champion?</string>
    <string name="questionOne_op1">7</string>
    <string name="questionOne_op2">5</string>
    <string name="questionOne_op3">9</string>
    <string name="questionOne_op4">3</string>
    <string name="question_2">QUESTION 2</string>
    <string name="questionTwo">What is the name of the Barcelona football stadium ?</string>
    <string name="questionTwo_op1">Camp Nou</string>
    <string name="questionTwo_op2">Santiago Bernabeu</string>
    <string name="question_3">QUESTION 3</string>
    <string name="questionThree">Which cyclist was also called the cannibal?</string>
    <string name="questionThree_op1">A. Lance Amstrong</string>
    <string name="questionThree_op2">B. Miguel Indurain</string>
    <string name="questionThree_op3">C. Bernard Hinault</string>
    <string name="questionThree_op4">D. Eddy Merckx</string>
    <string name="question_4">QUESTION 4</string>
    <string name="questionFour">In which year did Maradona score a goal with his hand</string>
    <string name="questionFour_op1">1986</string>
    <string name="questionFour_op2">1990</string>
    <string name="question_5">QUESTION 5</string>
    <string name="questionFive">In which country is the Interlagos F1-circuit ?</string>
    <string name="questionFive_op1">Spain</string>
    <string name="questionFive_op2">Germany</string>
    <string name="questionFive_op3">Italy</string>
    <string name="questionFive_op4">Brazil</string>
    <string name="submitButton">SUBMIT</string>

</resources>