<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:text="Sports Quizz"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/nameField_hint"
            android:inputType="text" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/questionOne"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/question1ChkBx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:text="@string/questionOne_op1"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question1ChkBx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:text="@string/questionOne_op2"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/question1ChkBx3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:text="@string/questionOne_op3"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question1ChkBx4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:text="@string/questionOne_op4"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/questionTwo"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupQuestion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question2radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:paddingStart="18sp"
                android:paddingLeft="18sp"
                android:text="@string/questionTwo_op1" />

            <RadioButton
                android:id="@+id/question2radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:paddingStart="18dp"
                android:paddingLeft="18dp"
                android:text="@string/questionTwo_op2" />
        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/questionThree"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/question3answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/question_3hint"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question3Option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="36dp"
                android:paddingLeft="8dp"
                android:text="@string/questionThree_op1"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/question3Option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:paddingLeft="24dp"
                android:text="@string/questionThree_op2"
                android:textAllCaps="true"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question3Option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="36dp"
                android:paddingLeft="8dp"
                android:text="@string/questionThree_op3"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/question3Option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:paddingLeft="24dp"
                android:text="@string/questionThree_op4"
                android:textAllCaps="true"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/questionFour"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupQuestion4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question4radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:paddingLeft="18dp"
                android:text="@string/questionFour_op1" />

            <RadioButton
                android:id="@+id/question4radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:paddingLeft="18dp"
                android:text="@string/questionFour_op2" />
        </RadioGroup>


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/questionFive"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/question5ChkBx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:text="@string/questionFive_op1"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question5ChkBx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:text="@string/questionFive_op2"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/question5ChkBx3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:text="@string/questionFive_op3"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <CheckBox
                android:id="@+id/question5ChkBx4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="36dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:text="@string/questionFive_op4"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp"
            android:onClick="verifyAnswer"
            android:paddingLeft="18dp"
            android:text="@string/submitButton"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textAlignment="center"/>

    </LinearLayout>
</ScrollView>